fixed modal z-index

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -435,6 +435,7 @@ margin-top: 15px;
   justify-content: center;
   align-content: center;
   overflow: scroll;
+  z-index: 900;
 
   
 }
