--- a/public/listingDescription.css
+++ b/public/listingDescription.css
@@ -433,6 +433,7 @@ margin-top: 15px;
   justify-content: center;
   align-content: center;
   overflow: scroll;
+  z-index: 900;
 
   
 }
